--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "api",
+  "name": "kmeans-hdb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -w",
     "dev": "nodemon build/index.js",
-    "server": "concurrently --kill-others \"npm run dev\"",
-    "start": "node index.js"
+    "server": "concurrently --kill-others \"npm run build\" \"npm run dev\"",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^5.3.1",
+    "@types/morgan": "^1.9.3",
+    "concurrently": "^6.2.0",
     "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "formidable": "^1.2.2",
-    "mysql": "^2.18.1",
-    "uuid": "^8.1.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
+    "clusters": "^0.0.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.1",
+    "express-handlebars": "^5.3.5",
+    "morgan": "^1.10.0",
+    "mssql": "^7.2.0",
     "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.6",
-    "sequelize": "^6.20.1",
-    "validator": "^13.7.0"
+    "path": "^0.12.7",
+    "promise-mysql": "^5.2.0"
   }
 }
